# threatfusion

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  lefthook.yml  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vite.config.ts
.agents/skills/vercel-react-best-practices/: AGENTS.md
.github/workflows/: test.yml  tests.yml
apps/backend/: .env.example  Dockerfile  README.md  dev.sh  main.py  package.json  pyproject.toml  requirements-test.txt
apps/backend/app/api/: resources.py  websocket.py
apps/backend/app/core/: config.py
apps/backend/app/models/: deployment.py  resource.py
apps/backend/app/schemas/: deployment.py
apps/backend/app/services/: deployment.py  health.py
apps/backend/app/workers/: celery_app.py
apps/backend/scripts/: check-updates.sh  freeze.sh  update-deps.sh
apps/backend/tests/: conftest.py  test_docker_connector.py  test_resources.py
apps/docs/: README.md  package.json  vite.config.ts
apps/docs/src/: routeTree.gen.ts
apps/web/: Dockerfile  components.json  index.html  package.json  tsconfig.json  vite.config.ts
backend/: requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/tests/: conftest.py  test_deployments.py  test_realtime.py
docs/: architecture.md
docs/adr/: 0001-choix-fastapi.md  0002-celery-rabbitmq-vs-cron.md  0003-modele-agregation-sante.md  0004-redis-pubsub-websocket-bridge.md
frontend/: package.json
infra/docker/: .env.example  docker-compose.yml
scripts/: check_dependencies.ps1  check_dependencies.sh
(+35 files in other folders)
