[project]
name = "backend"
version = "0.1.0"
description = "ThreatFusion backend API — IDP self-service platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.3",
    "celery>=5.6.3",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "docker>=7.1.0",
    "kubernetes>=36.0.2",
    "websockets>=13.1",
    "redis>=5.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]
